--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,14 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.2"
+    "vue": "^3.0.2",
+    "vue-router": "^4.0.0-rc.1"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.8",
-    "@vue/compiler-sfc": "^3.0.2"
+    "@vue/compiler-sfc": "^3.0.2",
+    "eslint": "^7.12.1",
+    "eslint-plugin-vue": "^7.1.0",
+    "typescript": "^4.0.5",
+    "vite": "^1.0.0-rc.8"
   }
 }
