--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.2",
     "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.1.0",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.5",
     "vite": "^1.0.0-rc.8"
   }
