Feature: add api ping

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -1,12 +1,18 @@
 [[source]]
-url = "https://pypi.org/simple"
+url = "https://mirrors.aliyun.com/pypi/simple/"
 verify_ssl = true
 name = "pypi"
 
 [packages]
 flask = "*"
+flask-cors = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
+flask-mail = "*"
 
 [dev-packages]
+flake8 = "*"
+pylint = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
