use docker in frontend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,7 @@ WORKDIR /home/work/backend
 COPY ./Pipfile ./Pipfile
 RUN pip install -i https://pypi.tuna.tsinghua.edu.cn/simple pipenv && pipenv install
 VOLUME "/home/work/backend"
-# ENTRYPOINT [ "pipenv" ]
+EXPOSE 5000
+
+ENTRYPOINT [ "pipenv", "run" ]
+CMD ["flask" "run"]
