--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,16 @@
-backend:
-  build: ./backend
-  ports:
-    - 5000:5000
-  volumes:
-    - "./backend:/home/work/backend"
-  entrypoint: "pipenv run python server.py run"
+services:
+  backend:
+    build: ./backend
+    ports:
+      - 5000:5000
+    volumes:
+      - "./backend:/home/work/backend"
+    command: ["python", "server.py", "run"]
+
+  frontend:
+    build: ./frontend
+    ports:
+      - 3000:3000
+    volumes:
+      - "./frontend/src:/home/work/frontend/src"
+    command: ["start"]
